--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
 <title>JP</title>
 <!-- for-mobile-apps -->
@@ -34,6 +34,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <body>
 
 <!-- top header -->
+<div class="fixed-top" id="navbar">
 <div class="header-top">
 	<div class="container">
 		<div class="row">
@@ -47,7 +48,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="email_icon"></span>
 						<a href="mailto:info@ryoki.com.vn" class="">info@ryoki.com.vn</a>
 					</li>
-                    <li class="mr-lg icon_text">
+                    <li class="mr-lg icon_text phone_head">
                         <span class="phone_icon"></span>
                         <a href="tel:+842838209151" class="">+84 28 3820 9151</a>
                     </li>
@@ -101,6 +102,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<!-- //nav -->
 	</div>
 </header>
+</div>
 <!-- //header -->
 
 <!-- banner -->
@@ -112,25 +114,70 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				Et diam
 			<span class="text_banner_animation"> in turpis platea vivamus ut</span></div>
 		</div>
+        <div class="container py-lg-5">
+            <div class="row offer-grids">
+                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
+                    <div class="ser1">
+                        <div class="bg-layer">
+                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
+                    <div class="ser1">
+                        <div class="bg-layer">
+                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
+                    <div class="ser1">
+                        <div class="bg-layer">
+                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
+                    <div class="ser1">
+                        <div class="bg-layer">
+                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row offer-grids">
+                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
+                    <div class="ser1">
+                        <div class="bg-layer">
+                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
+                    <div class="ser1">
+                        <div class="bg-layer">
+                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
+                    <div class="ser1">
+                        <div class="bg-layer">
+                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 	</div>
 
-	<!--<div class="container list-group-item-home">-->
-		<!--<div class="row">-->
-			<!--<div class="col-sm-3 col-6" >-->
-				<!--<img src="images/rectangle3.png">-->
-			<!--</div>-->
-			<!--<div class="col-sm-3 col-6" >-->
-				<!--<img src="images/rectangle3.png">-->
-			<!--</div>-->
-			<!--<div class="col-sm-3 col-6" >-->
-				<!--<img src="images/rectangle3.png">-->
-			<!--</div>-->
-			<!--<div class="col-sm-3 col-6" >-->
-				<!--<img src="images/rectangle3.png">-->
-			<!--</div>-->
-
-		<!--</div>-->
-	<!--</div>-->
 </div>
 <!-- //banner -->
 
@@ -301,8 +348,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <footer class="footer_box">
 	<div class="container">
 		<div class=" row">
-	<div class="col">Copyright © RYOKI KOGYO CO.,LTD. All Rights Reserved.</div>
-	<div class="col footer_box_ul">
+	<div class="col-md-6">Copyright © RYOKI KOGYO CO.,LTD. All Rights Reserved.</div>
+	<div class="col-md-6 footer_box_ul">
 		<ul>
 			<li>
 				<a href="#">Privacy/Cookies </a>
