--- a/contact.html
+++ b/contact.html
@@ -107,127 +107,51 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- banner -->
 <div class="banner_sub" id="home">
     <div class="txt_h1">
-        <h1>Corporate Profile</h1>
+        <h1>Inquiries</h1>
         <div class="border_bottom_home"></div>
     </div>
     <!--</section>-->
     <section class="breadcrumb_box container">
         <div class="bg_top_main">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <!--<li class="breadcrumb-item"><a href="#">Library</a></li>-->
-                    <li class="breadcrumb-item active" aria-current="page">Profile</li>
-                </ol>
-            </nav>
         </div>
     </section>
 </div>
 <!-- //banner -->
 <section class="main_content">
     <div class="container">
-        <section class="main_content">
-            <div class="container business_box works_box">
-                <h4 class="works_h4">Public and Cultural Facilities</h4>
-                <div class="row">
-                    <div class="col-md-6 col-sm-6 col-6 item_solution_box">
-                        <a href="#">
-                            <div class="box_solution">
-                                <div class="item_img_solution_box">
-                                    <img class="img-fluid" src="images/works.png">
-                                </div>
-                            </div>
-                            <div class="container_tittle">
-                                <h5>Air Conditioning / Water Supply / Drainage Systems</h5>
-                            </div>
-                        </a>
+        <section class="main_content contact_box_section">
+            <div class="contact_form">
+                <form>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputEmail4">Your name</label>
+                            <input type="text" class="form-control" id="inputEmail4">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputPassword4">Your email</label>
+                            <input type="text" class="form-control" id="inputPassword4" >
+                        </div>
                     </div>
-                    <div class="col-md-6 col-sm-6 col-6 item_solution_box">
-                        <a href="#">
-                            <div class="box_solution">
-                                <div class="item_img_solution_box">
-                                    <img class="img-fluid" src="images/works.png">
-                                </div>
-                            </div>
-                            <div class="container_tittle">
-                                <h5>Air Conditioning / Water Supply / Drainage Systems</h5>
-                            </div>
-                        </a>
+                    <div class="form-group">
+                        <label for="inputAddress">Subject</label>
+                        <input type="text" class="form-control" id="inputAddress">
                     </div>
-                    <div class="col-md-6 col-sm-6 col-6 item_solution_box">
-                        <a href="#">
-                            <div class="box_solution">
-                                <div class="item_img_solution_box">
-                                    <img class="img-fluid" src="images/works.png">
-                                </div>
-                            </div>
-                            <div class="container_tittle">
-                                <h5>Air Conditioning / Water Supply / Drainage Systems</h5>
-                            </div>
-                        </a>
+                    <div class="form-group">
+                        <label for="inputAddress2">Messenge</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
                     </div>
-                    <div class="col-md-6 col-sm-6 col-6 item_solution_box">
-                        <a href="#">
-                            <div class="box_solution">
-                                <div class="item_img_solution_box">
-                                    <img class="img-fluid" src="images/works.png">
-                                </div>
-                            </div>
-                            <div class="container_tittle">
-                                <h5>Air Conditioning / Water Supply / Drainage Systems</h5>
-                            </div>
-                        </a>
+
+                    <div class="form-group btn_contact_box">
+                        <button class="btn btn_contact_form" id="exampleFormControlTextarea11" type="submit">Send</button>
                     </div>
-                    <div class="col-md-6 col-sm-6 col-6 item_solution_box">
-                        <a href="#">
-                            <div class="box_solution">
-                                <div class="item_img_solution_box">
-                                    <img class="img-fluid" src="images/works.png">
-                                </div>
-                            </div>
-                            <div class="container_tittle">
-                                <h5>Air Conditioning / Water Supply / Drainage Systems</h5>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-6 item_solution_box">
-                        <a href="#">
-                            <div class="box_solution">
-                                <div class="item_img_solution_box">
-                                    <img class="img-fluid" src="images/works.png">
-                                </div>
-                            </div>
-                            <div class="container_tittle">
-                                <h5>Air Conditioning / Water Supply / Drainage Systems</h5>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-6 item_solution_box">
-                        <a href="#">
-                            <div class="box_solution">
-                                <div class="item_img_solution_box">
-                                    <img class="img-fluid" src="images/works.png">
-                                </div>
-                            </div>
-                            <div class="container_tittle">
-                                <h5>Air Conditioning / Water Supply / Drainage Systems</h5>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-6 item_solution_box">
-                        <a href="#">
-                            <div class="box_solution">
-                                <div class="item_img_solution_box">
-                                    <img class="img-fluid" src="images/works.png">
-                                </div>
-                            </div>
-                            <div class="container_tittle">
-                                <h5>Air Conditioning / Water Supply / Drainage Systems</h5>
-                            </div>
-                        </a>
-                    </div>
-                </div>
+                </form>
             </div>
+        </section>
+        <section class="map_contact container">
+            <div class="map_box">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26368.018834327184!2d106.7026209820408!3d10.763014690891946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528b516b1226d%3A0xb91fb87a504f1f92!2sT%C3%B2a%20Nh%C3%A0%20Nnc%20Building!5e0!3m2!1sen!2s!4v1571631087393!5m2!1sen!2s" width="100%" height="350" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </div>
+            <p class="map_icon_contact">6th floor - NNC building, 16 Bis Nguyen Dinh Chieu, Da Kao Ward, District 1, Ho Chi Minh City</p>
         </section>
 </section>
 <!-- footer box-->
