--- a/index.html
+++ b/index.html
@@ -114,68 +114,159 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				Et diam
 			<span class="text_banner_animation"> in turpis platea vivamus ut</span></div>
 		</div>
-        <div class="container py-lg-5">
-            <div class="row offer-grids">
-                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
-                    <div class="ser1">
-                        <div class="bg-layer">
-                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
+		<section class="home_box">
+			<section class="main_content">
+				<div class="container business_box">
+					<div class="row">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+							<a href="#">
+								<div class="box_solution">
+									<div class="item_img_solution_box">
+										<img class="img-fluid" src="images/trectangle.png">
+									</div>
+									<div class="icon_box">
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+									</div>
+									<div class="title_img_home">Air Conditioning / Water Supply / Drainage Systems</div>
+								</div>
+							</a>
+						</div>
+						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+							<a href="#">
+								<div class="box_solution">
+									<div class="item_img_solution_box">
+										<img class="img-fluid" src="images/trectangle.png">
+									</div>
+									<div class="icon_box">
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+									</div>
+									<div class="title_img_home">Air Conditioning / Water Supply / Drainage Systems</div>
+								</div>
+							</a>
+						</div>
+						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+							<a href="#">
+								<div class="box_solution">
+									<div class="item_img_solution_box">
+										<img class="img-fluid" src="images/trectangle.png">
+									</div>
+									<div class="icon_box">
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+									</div>
+									<div class="title_img_home">Air Conditioning / Water Supply / Drainage Systems</div>
+								</div>
+							</a>
+						</div>
+						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+							<a href="#">
+								<div class="box_solution">
+									<div class="item_img_solution_box">
+										<img class="img-fluid" src="images/trectangle.png">
+									</div>
+									<div class="icon_box">
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+									</div>
+									<div class="title_img_home">Air Conditioning / Water Supply / Drainage Systems</div>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="container">
+				<div class="community-images center-block">
+					<div class="row justify-content-md-center">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+							<a href="#">
+								<div class="box_solution">
+									<div class="item_img_solution_box">
+										<img class="img-fluid" src="images/trectangle.png">
+									</div>
+									<div class="icon_box">
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+									</div>
+									<div class="title_img_home">Air Conditioning / Water Supply / Drainage Systems</div>
+								</div>
+							</a>
+						</div>
+						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+							<a href="#">
+								<div class="box_solution">
+									<div class="item_img_solution_box">
+										<img class="img-fluid" src="images/trectangle.png">
+									</div>
+									<div class="icon_box">
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+									</div>
+									<div class="title_img_home">Air Conditioning / Water Supply / Drainage Systems</div>
+								</div>
+							</a>
+						</div>
+						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+							<a href="#">
+								<div class="box_solution">
+									<div class="item_img_solution_box">
+										<img class="img-fluid" src="images/trectangle.png">
+									</div>
+									<div class="icon_box">
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+									</div>
+									<div class="title_img_home">Air Conditioning / Water Supply / Drainage Systems</div>
+								</div>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
+		</section>
 
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
-                    <div class="ser1">
-                        <div class="bg-layer">
-                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
-                    <div class="ser1">
-                        <div class="bg-layer">
-                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
-                    <div class="ser1">
-                        <div class="bg-layer">
-                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row offer-grids">
-                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
-                    <div class="ser1">
-                        <div class="bg-layer">
-                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
-                    <div class="ser1">
-                        <div class="bg-layer">
-                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-6 col-6">
-                    <div class="ser1">
-                        <div class="bg-layer">
-                            <p class="mt-3">Vestibulum ante ipsum primiss sed inorc faucibus orcit luctus ipsum et ultrices sede edt posuere cubiliater Curae nisl, Curabit ur quis luctu.</p>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 	</div>
 
 </div>
