--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<section class="main_content">
 				<div class="container business_box">
 					<div class="row">
-						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-12 col-xs-6 item_solution_box">
 							<a href="#">
 								<div class="box_solution">
 									<div class="item_img_solution_box">
@@ -139,7 +139,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</a>
 						</div>
-						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-12 col-xs-6 item_solution_box">
 							<a href="#">
 								<div class="box_solution">
 									<div class="item_img_solution_box">
@@ -160,7 +160,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</a>
 						</div>
-						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-12 col-xs-6 item_solution_box">
 							<a href="#">
 								<div class="box_solution">
 									<div class="item_img_solution_box">
@@ -181,7 +181,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</a>
 						</div>
-						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-12 col-xs-6 item_solution_box">
 							<a href="#">
 								<div class="box_solution">
 									<div class="item_img_solution_box">
@@ -205,7 +205,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<section class="container">
 				<div class="community-images center-block">
 					<div class="row justify-content-md-center">
-						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-12 col-xs-6 item_solution_box">
 							<a href="#">
 								<div class="box_solution">
 									<div class="item_img_solution_box">
@@ -226,7 +226,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</a>
 						</div>
-						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-12 col-xs-6 item_solution_box">
 							<a href="#">
 								<div class="box_solution">
 									<div class="item_img_solution_box">
@@ -244,7 +244,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</a>
 						</div>
-						<div class="col-lg-3 col-md-6 col-sm-6 col-6 col-sm-6 col-xs-6 item_solution_box">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-12 col-xs-6 item_solution_box">
 							<a href="#">
 								<div class="box_solution">
 									<div class="item_img_solution_box">
