--- a/index.html
+++ b/index.html
@@ -159,52 +159,71 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<div class="title_img_home">Air Conditioning / Water Supply / Drainage Systems</div>
 								</div>
 							</a>
-						</div>
-						<div class="col-lg-3 col-md-6 col-sm-6 col-12 col-xs-6 item_solution_box">
-							<a href="#">
-								<div class="box_solution">
-									<div class="item_img_solution_box">
-										<img class="img-fluid" src="images/trectangle.png">
-									</div>
-									<div class="icon_box">
-										<div class="item_icon">
-											<img src="images/icon-business/air.png">
-										</div>
-										<div class="item_icon">
-											<img src="images/icon-business/air.png">
-										</div>
-										<div class="item_icon">
-											<img src="images/icon-business/air.png">
-										</div>
-									</div>
-									<div class="title_img_home">Air Conditioning / Water Supply / Drainage Systems</div>
+						</div>	<div class="col-lg-3 col-md-6 col-sm-6 col-12 col-xs-6 item_solution_box">
+						<a href="#">
+							<div class="box_solution">
+								<div class="item_img_solution_box">
+									<img class="img-fluid" src="images/trectangle.png">
 								</div>
-							</a>
-						</div>
-						<div class="col-lg-3 col-md-6 col-sm-6 col-12 col-xs-6 item_solution_box">
-							<a href="#">
-								<div class="box_solution">
-									<div class="item_img_solution_box">
-										<img class="img-fluid" src="images/trectangle.png">
+								<div class="icon_box">
+									<div class="item_icon">
+										<img src="images/icon-business/air.png">
 									</div>
-									<div class="icon_box">
-										<div class="item_icon">
-											<img src="images/icon-business/air.png">
-										</div>
-										<div class="item_icon">
-											<img src="images/icon-business/air.png">
-										</div>
+									<div class="item_icon">
+										<img src="images/icon-business/air.png">
 									</div>
-									<div class="title_img_home">Air Conditioning / Water Supply / Drainage Systems</div>
+									<div class="item_icon">
+										<img src="images/icon-business/air.png">
+									</div>
 								</div>
-							</a>
-						</div>
+								<div class="title_img_home">Air Conditioning / Water Supply / Drainage Systems</div>
+							</div>
+						</a>
+					</div>	<div class="col-lg-3 col-md-6 col-sm-6 col-12 col-xs-6 item_solution_box">
+						<a href="#">
+							<div class="box_solution">
+								<div class="item_img_solution_box">
+									<img class="img-fluid" src="images/trectangle.png">
+								</div>
+								<div class="icon_box">
+									<div class="item_icon">
+										<img src="images/icon-business/air.png">
+									</div>
+									<div class="item_icon">
+										<img src="images/icon-business/air.png">
+									</div>
+									<div class="item_icon">
+										<img src="images/icon-business/air.png">
+									</div>
+								</div>
+								<div class="title_img_home">Air Conditioning / Water Supply / Drainage Systems</div>
+							</div>
+						</a>
 					</div>
-				</div>
-			</section>
-			<section class="container">
-				<div class="community-images center-block">
-					<div class="row justify-content-md-center">
+						<div class="col-lg-3 col-md-6 col-sm-6 col-12 col-xs-6 item_solution_box">
+							<a href="#">
+								<div class="box_solution">
+									<div class="item_img_solution_box">
+										<img class="img-fluid" src="images/trectangle.png">
+									</div>
+									<div class="icon_box">
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
+									</div>
+									<div class="title_img_home">Air Conditioning / Water Supply / Drainage Systems</div>
+								</div>
+							</a>
+						</div>
+
+
+
 						<div class="col-lg-3 col-md-6 col-sm-6 col-12 col-xs-6 item_solution_box">
 							<a href="#">
 								<div class="box_solution">
@@ -233,6 +252,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<img class="img-fluid" src="images/trectangle.png">
 									</div>
 									<div class="icon_box">
+										<div class="item_icon">
+											<img src="images/icon-business/air.png">
+										</div>
 										<div class="item_icon">
 											<img src="images/icon-business/air.png">
 										</div>
