--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<p class="text_banner">Viverra nunc in</p>
 		<div class="box_text_banner">
 			<div>
-				Et diam
-			<span class="text_banner_animation"> in turpis platea vivamus ut</span></div>
+			<span class="text_banner_animation"> Et diam in turpis platea vivamus ut</span></div>
 		</div>
 		<section class="home_box">
 			<section class="main_content">
